add patient swagger docs
